--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@ btn">></div>
         <div class="car-container">
           <div class="item show">
             <img 
-src="../images/Afternoon.jpg" alt="Image-1" 
+src="fairy tale.jpg" alt="Image-1" 
 />
             <div class="cap">Image-1</div>
           </div>
