--- a/index.html
+++ b/index.html
@@ -27,9 +27,7 @@ src="fairy tale.jpg" alt="Image-1"
           </div>
           <div class="item">
             <img
-              src="../images/HD-wallpaper-
-purple-eyes-shogun-in-lightning-sky-
-background-baal-raiden-shogun.jpg"
+              src="orange light.jpg"
               alt="image-2"
             />
             <div class="cap">Image-2</div>
