--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@ src="fairy tale.jpg" alt="Image-1"
           </div>
           <div class="item">
             <img 
-src="../images/Evening.jpg" alt="" />
+src="mirchi light.webp" alt="" />
             <div class="cap">Image-3</div>
           </div>
         </div>
