--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@ btn">></div>
         <div class="car-container">
           <div class="item show">
             <img 
-src="aveo-silicone-blooming-flower-fairy-string-lights-16-led-3-meter-plug-in-yellow--250x250.jpg" alt="Image-1" 
+src="Untitled-design-69.jpg" alt="Image-1" 
 />
             <div class="cap">Image-1</div>
           </div>
